<resources>
  <string name="app_name">钱掌柜</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="openDrawer">open_drawer</string>
  <string name="closeDrawer">close_drawer</string>
  <string name="nav_sale_in">销售开单</string>
  <string name="nav_sale_out">销售退货</string>
  <string name="nav_sale_detail">交易记录</string>
  <string name="nav_sale_note">交易明细</string>
  <string name="nav_stock_in">采购入库</string>
  <string name="nav_stock_out">采购退货</string>
  <string name="nav_stock_detail">采购记录</string>
  <string name="nav_stock_note">采购明细</string>
  <string name="nav_inventory_detail">库存详情</string>
  <string name="nav_good_detail">货品详情</string>
  <string name="nav_good_new">新增货品</string>
  <string name="nav_good_color">颜色</string>
  <string name="nav_retailer_detail">零售商</string>
  <string name="nav_firm_detail">厂商</string>
  <string name="nav_blue_tooth_setting">蓝牙设置</string>
  <string name="nav_report_real">实时报表</string>
  <string name="nav_report_daily">日报表</string>
  <string name="nav_report_month">月报表</string>
  <string name="title_retailer_edit">零售商编辑</string>
  <string name="title_retailer_new">新增零售商</string>
  <string name="title_firm_new">新增厂商</string>
  <string name="title_firm_detail">厂商详情</string>
  <string-array name="nav_item_activity_titles">
    <item>销售开单</item>
    <item>销售退货</item>
    <item>交易记录</item>
    <item>交易明细</item>

    <item>采购入库</item>
    <item>采购退货</item>
    <item>采购记录</item>
    <item>采购明细</item>

    <item>库存详情</item>

    <item>货品详情</item>
    <item>新增货品</item>
    <item>颜色详情</item>

    <item>零售商详情</item>
    <item>厂商详情</item>
    <item>蓝牙打印机设置</item>

    <item>实时报表</item>
    <item>日报表</item>
    <item>月报表</item>
    

  </string-array>
  <string-array name="thead_sale_detail">
    <item>序号</item>
    <item>单号</item>
    <item>交易</item>
    <item>客户</item>
    <item>数量</item>
    <item>上欠</item>
    <item>应付</item>
    <item>实付</item>
    <item>核销</item>
    
    <item>累欠</item>
    
    
    
    <item>日期</item>
    
    
    
  </string-array>
  <string-array name="thead_sale_detail_note">
    <item>序号</item>
    <item>单号</item>
    <item>客户</item>
    <item>交易</item>
    <item>款号</item>
    <item>品名</item>
    <item>类别</item>
    <item>厂商</item>
    <item>单价</item>
    <item>折扣</item>
    <item>数量</item>
    <item>合计</item>
    <item>日期</item>
    
    
  </string-array>
  <string-array name="thead_sale">
    <item>序号</item>
    <item>货号</item>
    <item>库存</item>
    <item>价类型</item>
    <item>单价</item>
    <item>折扣</item>
    <item>折价</item>
    <item>数量</item>
    <item>合计</item>
    <item>备注</item>
    
  </string-array>
  <string-array name="thead_sale_reverse">
    <item>序号</item>
    <item>货号</item>
    <item>库存</item>
    <item>价类型</item>
    <item>单价</item>
    <item>折扣</item>
    <item>数量</item>
    <item>折价</item>
    <item>合计</item>
    <item>备注</item>
  </string-array>
  <string-array name="thead_stock">
    <item>序号</item>
    <item>货号</item>
    <item>年度</item>
    <item>季节</item>
    <item>进价</item>
    <item>数量</item>
    <item>合计</item>
  </string-array>
  <string-array name="price_type_on_sale">
    <item>吊牌价</item>
    <item>批发价</item>
    <item>价3</item>
    <item>价4</item>
    <item>价5</item>
  </string-array>
  <string-array name="sale_type">
    <item>开单</item>
    <item>退货</item>
    <item>结帐</item>
  </string-array>
  <string-array name="stock_type">
    <item>采购</item>
    <item>退货</item>
  </string-array>
  <string-array name="extra_cost_on_sale">
    <item>代付运费</item>
  </string-array>
  <string-array name="seasons">
    <item>春</item>
    <item>夏</item>
    <item>秋</item>
    <item>冬</item>
  </string-array>
  <string-array name="servers">
    <item>深圳服务器</item>
    <item>测试服务器</item>
  </string-array>
  <string-array name="thead_stock_detail">
    <item>序号</item>
    <item>单号</item>
    <item>交易</item>
    <item>厂商</item>
    <item>数量</item>
    <item>上欠</item>
    <item>应付</item>
    <item>实付</item>
    <item>核销</item>
    
    <item>累欠</item>
    
    
    
    <item>日期</item>
    
    
    
  </string-array>
  <string-array name="thead_stock_detail_note">
    <item>序号</item>
    <item>单号</item>
    <item>交易</item>
    <item>厂商</item>
    <item>款号</item>
    <item>品名</item>
    <item>类别</item>
    
    <item>年度</item>
    <item>折扣</item>
    <item>数量</item>
    
    <item>日期</item>
  </string-array>
  <string-array name="thead_inventory_detail">
    <item>序号</item>
    <item>款号</item>
    <item>品名</item>
    <item>类别</item>
    <item>厂商</item>
    <item>季节</item>
    <item>年度</item>
    <item>吊牌价</item>
    <item>批发价</item>
    <item>库存</item>
    <item>已售</item>
    <item>上架日期</item>
  </string-array>
  <string-array name="thead_good_detail">
    <item>序号</item>
    <item>款号</item>
    <item>品名</item>
    <item>类别</item>
    <item>厂商</item>
    <item>季节</item>
    <item>年度</item>
    <item>进价</item>
    <item>吊牌价</item>
    <item>批发价</item>
    <item>折扣</item>
    <item>上架日期</item>
  </string-array>
  <string-array name="thead_color_detail">
    <item>序号</item>
    <item>名称</item>
    <item>基础色</item>
  </string-array>
  <string-array name="thead_retailer_detail">
    <item>序号</item>
    <item>名称</item>
    <item>帐户欠款</item>
    <item>联系方式</item>
    <item>联系地址</item>
    <item>创建日期</item>
  </string-array>
  <string-array name="thead_firm_detail">
    <item>序号</item>
    <item>名称</item>
    <item>帐户欠款</item>
    <item>联系方式</item>
    <item>联系地址</item>
    <item>创建日期</item>
  </string-array>
  <string-array name="thead_daily_report_real">
    <item>序号</item>
    <item>店铺</item>
    <item>上期库存</item>
    <item>当前库存</item>
    <item>入库</item>
    <item>出库</item>
    <item>销售</item>
    <item>应付</item>
    <item>实收</item>
    <item>现金</item>
    <item>刷卡</item>
    <item>汇款</item>
    <item>核销</item>
    <item>销售成本</item>
    <item>毛利</item>
    <item>毛利率</item>
  </string-array>
  <string-array name="thead_daily_sale_report">
    <item>序号</item>
    <item>店铺</item>
    <item>款号</item>
    <item>数量</item>
    <item>类别</item>
    <item>厂商</item>
  </string-array>
  <string-array name="thead_daily_report">
    <item>序号</item>
    <item>日期</item>

    <item>店铺</item>
    <item>库存</item>
    <item>计算库存</item>
    <item>库存成本</item>

    <item>销售</item>
    <item>销售成本</item>
    <item>应付</item>
    <item>实收</item>

    <item>现金</item>
    <item>刷卡</item>
    <item>汇款</item>
    <item>核销</item>

    <item>入库</item>
    <item>入库成本</item>
    <item>出库</item>
    <item>出库成本</item>
    <item>生成日期</item>
  </string-array>
  <string-array name="sexes">
    <item>女</item>
    <item>男</item>
  </string-array>
  <string-array name="sale_types_desc">
    <item>销售开单</item>
    <item>销售退货</item>
  </string-array>
  <string-array name="stock_types_desc">
    <item>采购入库</item>
    <item>采购退货</item>
  </string-array>
  <string-array name="years">
    <item>2013</item>
    <item>2014</item>
    <item>2015</item>
    <item>2016</item>
    <item>2017</item>
    <item>2018</item>
    <item>2019</item>
    <item>2020</item>
    <item>2021</item>
    <item>2022</item>
    <item>2023</item>
    <item>2024</item>
    <item>2025</item>
    <item>2026</item>
    <item>2027</item>
    <item>2028</item>
    <item>2029</item>
    <item>2030</item>
  </string-array>
  <string-array name="color_kinds">
    <item>红</item>
    <item>黄</item>
    <item>绿</item>
    <item>蓝</item>
    <item>黑</item>
    <item>白</item>
    <item>紫</item>
    <item>灰</item>
  </string-array>
  <string-array name="filter_sale_detail">
    <item>客户</item>
    <item>店铺</item>
    <item>单号</item>
  </string-array>
  <string name="order_id">序号</string>
  <string name="rsn">单号</string>
  <string name="trans">交易</string>
  <string name="shop">店铺</string>
  <string name="employee">店员</string>
  <string name="retailer">客户</string>
  <string name="amount">数量</string>
  <string name="balance">上欠</string>
  <string name="should_pay">应付</string>
  <string name="has_pay">实付</string>
  <string name="verificate">核销</string>
  <string name="epay">费用</string>
  <string name="acc_balance">累欠</string>
  <string name="cash">现金</string>
  <string name="card">刷卡</string>
  <string name="wire">汇款</string>
  <string name="date">日期</string>
  <string name="comment">备注</string>
  <string name="good">货号</string>
  <string name="brand">品名</string>
  <string name="stock">库存</string>
  <string name="price_type">价类型</string>
  <string name="price">单价</string>
  <string name="discount">折扣</string>
  <string name="fprice">折价</string>
  <string name="calculate">合计</string>
  <string name="operate">操作</string>
  <string name="tag_price">吊牌价</string>
  <string name="pkg_price">批发价</string>
  <string name="price3">价3</string>
  <string name="price4">价4</string>
  <string name="price5">价5</string>
  <string name="free_color">均色</string>
  <string name="free_size">均码</string>
  <string name="sell">已售</string>
  <string name="inventory">库存</string>
  <string name="shelfDate">上架日期</string>
  <string name="year">年度</string>
  <string name="season">季节</string>
  <string name="org_price">进价</string>
  <string name="style_number">款号</string>
  <string name="good_type">类别</string>
  <string name="firm">厂商</string>
  <string name="sex">性别</string>
  <string name="color">颜色</string>
  <string name="size">尺码</string>
  <string name="star">*</string>
  <string name="color_name">名称</string>
  <string name="color_type">基础色</string>
  <string name="diablo_name">名称</string>
  <string name="diablo_arrears">帐户欠款</string>
  <string name="diablo_phone">联系方式</string>
  <string name="diablo_address">联系地址</string>
  <string name="diablo_datetime">创建日期</string>
  <string name="stock_last">上期库存</string>
  <string name="stock_current">当前库存</string>
  <string name="stock_in">入库</string>
  <string name="stock_out">出库</string>
  <string name="stock_sell">销售</string>
  <string name="turnover">应付</string>
  <string name="paid">实收</string>
  <string name="sell_cost">销售成本</string>
  <string name="gross_profit">毛利</string>
  <string name="gross_margin">毛利率</string>
  <string name="stock_calculate">计算库存</string>
  <string name="stock_cost">库存成本</string>
  <string name="stock_in_cost">入库成本</string>
  <string name="stock_out_cost">出库成本</string>
  <string name="daily_report_date">日期</string>
  <string name="daily_report_gen_date">生成日期</string>
  <string name="start_date">开始</string>
  <string name="end_date">结束</string>
  <string name="sale_in_fragment">Sale In fragment</string>
  <string name="diablo_test_server">http://192.168.50.127:63551/</string>
  <string name="diablo_production_server">http://120.25.212.38/</string>
  <string name="activity_title_about_us">About Us</string>
  <string name="activity_title_privacy_policy">Privacy Policy</string>
  <string name="action_clear_all">Clear All</string>
  <string name="action_logout">Logout</string>
  <string name="action_mark_all_read">Mark All as Read</string>
  <string name="privacy_policy">Privacy Policy</string>
  <string name="login">登录</string>
  <string name="user_login">用户登录</string>
  <string name="login_name">请输入用户名</string>
  <string name="login_password">请输入用户密码</string>
  <string name="logout">注销</string>
  <string name="login_clear">清除登录信息</string>
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="add_filter_condition">增加匹配条件</string>
  <string name="login_ok">确认</string>
  <string name="please_input_retailer">客户</string>
  <string name="retailer_balance">上欠</string>
  <string name="retailer_accBalance">累欠</string>
  <string name="cost_on_sale">费用</string>
  <string name="add">新增</string>
  <string name="btn_refresh">刷新</string>
  <string name="btn_save">保存</string>
  <string name="btn_next">下一单</string>
  <string name="btn_back">返回</string>
  <string name="btn_stock_in">入库</string>
  <string name="btn_stock_out">退货</string>
  <string name="btn_stock_store">库存</string>
  <string name="btn_good">货品</string>
</resources>