<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
  <item android:id="@+id/stock_in_back"
        android:title="@string/btn_back"
        android:icon="@drawable/ic_arrow_back_black_24dp"
        app:showAsAction="ifRoom|withText" />

  <item android:id="@+id/stock_in_to_good_new"
        android:title="@string/btn_good"
        android:icon="@drawable/ic_add_black_24dp"
        app:showAsAction="ifRoom|withText" />

  <item android:id="@+id/stock_in_save"
        android:title="@string/btn_save"
        android:icon="@drawable/ic_file_download_black_24dp"
        app:showAsAction="ifRoom|withText" />

  <item android:id="@+id/stock_in_next"
        android:title="@string/btn_next"
        android:icon="@drawable/ic_add_circle_black_24dp"
        app:showAsAction="ifRoom|withText"/>
</menu>