<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.diablo.dt.diablo.fragment.SaleIn">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageButton
            android:id="@+id/sale_add_retailer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:src="@drawable/ic_add_black_24dp"
            android:contentDescription="@string/add"/>
        <AutoCompleteTextView
            android:id="@+id/sale_select_retailer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/please_input_retailer"
            android:layout_weight="0.8" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_place_black_24dp"
            android:layout_weight="0.2"
            android:contentDescription="@string/shop"/>
        <TextView
            android:id="@+id/sale_selected_shop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_weight="0.8" />


        <ImageButton
            android:id="@+id/sale_select_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:src="@drawable/ic_date_range_black_24dp"
            android:contentDescription="@string/date"/>
        <TextView
            android:id="@+id/sale_selected_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:src="@drawable/ic_person_black_24dp"
            android:contentDescription="@string/employee"/>
        <Spinner
            android:id="@+id/sale_select_employee"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:src="@drawable/ic_insert_comment_black_24dp"
            android:contentDescription="@string/comment" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/sale_comment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.15"/>


        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:src="@drawable/ic_money_off_black_24dp"
            android:contentDescription="@string/money_off"/>
        <android.support.design.widget.TextInputEditText
            android:id="@+id/sale_cash"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/cash"
            android:layout_weight="0.8"/>


        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:src="@drawable/ic_credit_card_black_24dp"
            android:contentDescription="@string/card" />
        <android.support.design.widget.TextInputEditText
            android:id="@+id/sale_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/card"
            android:layout_weight="0.8" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:src="@drawable/ic_network_wifi_black_24dp"
            android:contentDescription="@string/wire" />
        <android.support.design.widget.TextInputEditText
            android:id="@+id/sale_wire"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/wire"
            android:layout_weight="0.8" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:src="@drawable/ic_attach_money_black_24dp"
            android:contentDescription="@string/balace" />
        <android.support.design.widget.TextInputEditText
            android:id="@+id/sale_balance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/balace"
            android:layout_weight="0.8" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:src="@drawable/ic_local_airport_black_24dp"
            android:contentDescription="@string/amount" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/sale_total"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.15"/>


        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:src="@drawable/ic_remove_circle_outline_black_24dp"
            android:contentDescription="@string/money_off"/>
        <android.support.design.widget.TextInputEditText
            android:id="@+id/sale_verificate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/verificate"
            android:layout_weight="0.8"/>


        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:src="@drawable/ic_attach_money_black_24dp"
            android:contentDescription="@string/should_pay" />
        <android.support.design.widget.TextInputEditText
            android:id="@+id/sale_should_pay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/should_pay"
            android:layout_weight="0.8" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:src="@drawable/ic_attach_money_black_24dp"
            android:contentDescription="@string/has_pay" />
        <android.support.design.widget.TextInputEditText
            android:id="@+id/sale_has_pay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/has_pay"
            android:layout_weight="0.8" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:src="@drawable/ic_attach_money_black_24dp"
            android:contentDescription="@string/acc_balance" />
        <android.support.design.widget.TextInputEditText
            android:id="@+id/sale_accbalance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/acc_balance"
            android:layout_weight="0.8" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/t_sale_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin">
        <TableLayout
            android:id="@+id/t_sale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TableLayout>
    </ScrollView>

</LinearLayout>
